@@ -1,3 +1,7 @@
+Tue Aug 18 23:53:50 BST 2009  Colin Watson  <cjwatson@debian.org>
+
+	* src/tests/Makefile.am (dist_check_SCRIPTS): Distribute test files.
+
 Tue Aug 18 23:39:28 BST 2009  Colin Watson  <cjwatson@debian.org>
 
 	* src/tests/Makefile: Remove; accidentally added to revision
